--- a/style.css
+++ b/style.css
@@ -12,14 +12,20 @@ body {
   align-items: center;
   justify-content: space-around;
 
-  background-color: black;
+  background-color: rgb(44, 44, 44);
   color: white;
-  padding: 20px 0;
+
+  overflow: hidden;
+  overflow-y: auto;
+  overflow-x: auto;
+  
 }
 
 header {
   width: 100%;
-  margin-top: 0px;
+  padding: 20px;
+  background-color: rgb(204, 125, 51);
+  border-radius: 10px;
 }
 
 header div.header_description {
@@ -77,6 +83,7 @@ div.index_buttons div.create_account button {
   font-weight: bold;
   margin: 10px;
   color: black;
+  border: none;
 }
 
 div.index_buttons div.login_users {
@@ -95,6 +102,7 @@ div.index_buttons div.login_users button {
   font-weight: bold;
   margin: 10px;
   color: black;
+  border: none;
 }
 
 div.index_buttons div.help_users {
@@ -113,6 +121,7 @@ div.index_buttons div.help_users button {
   font-weight: bold;
   margin: 10px;
   color: black;
+  border: none;
 }
 
 div.popup_container {
@@ -325,7 +334,7 @@ div.popup_container div.help_popup h2 {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  margin-bottom: 40px;
+  margin-bottom: 90px;
   margin-top: 20px;
 }
 
@@ -333,7 +342,7 @@ div.popup_container div.help_popup h2 div {
   display: flex;
   flex-direction: column;
   width: 800px;
-  margin-left: 90px;
+  margin-left: 380px;
   margin-right: 10px;
 }
 
@@ -347,18 +356,26 @@ div.popup_container div.help_popup h2 button {
   background-color: transparent;
   width: 50px;
   height: 40px;
-  font-size: 30px;
+  font-size: 40px;
   margin-right: 40px;
 }
 
 div.popup_container div.help_popup div.help_description {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-size: 35px;
+  font-size: 38px;
   font-weight: lighter;
   color: black;
   width: 800px;
   height: auto;
   text-align: center;
+  margin: auto;
+}
+
+div.popup_container div.help_popup div.help_description a {
+  margin: auto;
+  margin-top: 30px;
+  color: blue;
 }
